--- a/UserSettings/Search.settings
+++ b/UserSettings/Search.settings
@@ -11,7 +11,7 @@ scopes = {
 	"last_search.E8DA15E5" = "wdw"
 	"OpenInspectorPreview.E8DA15E5" = "0"
 	"currentGroup.E8DA15E5" = "all"
-	"last_search.3BE40471" = "event"
+	"last_search.3BE40471" = "heli"
 	"OpenInspectorPreview.3BE40471" = "0"
 	"currentGroup.3BE40471" = "all"
 	"last_search.310DEAF1" = ""
